fixed #menu{z-index:1000;}

--- a/full_plugin/latex.css
+++ b/full_plugin/latex.css
@@ -19,6 +19,7 @@ hr {
   display: none;
   position: absolute;
   text-align:center;
+  z-index: 10000;
 }
 #overlay {
     position: fixed;
